--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,15 @@ services:
     environment:
       REDIS_PASSWORD: "redis123"
 
+  redisinsight:
+    image: redislabs/redisinsight:latest
+    container_name: redisinsight
+    restart: always
+    ports:
+      - "8001:8001"
+    environment:
+      - REDIS_URI=redis://localhost:6379
+
   postgres:
     image: postgres:latest
     restart: always
