--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 version: "3"
 
 services:
-  # nginx:
-  #   build: ./nginx
-  #   container_name: meetspace_nginx
-  #   ports:
-  #     - "8010:8010"
+  meetspace_backend:
+    build: .
+    container_name: backend
+    ports:
+      - "8010:8010"
+    env_file: .env.prod
+    depends_on:
+      - postgres
+      - redis
 
   redis:
     image: redis:latest
@@ -14,8 +18,7 @@ services:
     ports:
       - "6379:6379"
     command: /bin/sh -c "redis-server --requirepass $$REDIS_PASSWORD"
-    environment:
-      REDIS_PASSWORD: "redis123"
+    env_file: .env.prod
 
   redisinsight:
     image: redislabs/redisinsight:latest
@@ -24,7 +27,7 @@ services:
     ports:
       - "8001:8001"
     environment:
-      - REDIS_URI=redis://localhost:6379
+      - REDIS_URI=redis://meetspace_redis:6379
 
   postgres:
     image: postgres:latest
@@ -32,12 +35,7 @@ services:
     container_name: meetspace_postgres
     ports:
       - "5432:5432"
-    environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    # networks:
-    #   - my-network
+    env_file: .env.prod
 
   # elasticsearch:
   #   image: elasticsearch:7.14.2
@@ -75,9 +73,11 @@ services:
   # depends_on:
   #   - zookeeper
 
-# networks:
-#   my-network:
-#     driver: bridge
+  # nginx:
+  #   build: ./nginx
+  #   container_name: meetspace_nginx
+  #   ports:
+  #     - "8010:8010"
 
 volumes:
   minio-data:
