--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,12 @@ services:
     build: .
     container_name: backend
     ports:
-      - "8010:8010"
+      - "8080:8080"
     env_file: .env.prod
+    networks:
+      - mynet
     depends_on:
-      - postgres
+      - db
       - redis
 
   redis:
@@ -29,13 +31,15 @@ services:
     environment:
       - REDIS_URI=redis://meetspace_redis:6379
 
-  postgres:
+  db:
     image: postgres:latest
     restart: always
     container_name: meetspace_postgres
     ports:
       - "5432:5432"
     env_file: .env.prod
+    networks:
+      - mynet
 
   # elasticsearch:
   #   image: elasticsearch:7.14.2
@@ -78,6 +82,10 @@ services:
   #   container_name: meetspace_nginx
   #   ports:
   #     - "8010:8010"
+
+networks:
+  mynet:
+    driver: bridge
 
 volumes:
   minio-data:
