--- a/.env.prod
+++ b/.env.prod
@@ -1,9 +1,12 @@
+PORT=8081
+
 # database config
 DB_NAME='meetspace_db'
 DB_USERNAME='postgres'
 DB_PASSWORD='postgres'
 DB_HOST='db'
 DB_PORT=5432
+
 
 # jwt
 JWT_SECRET_KEY='$2a$10$LbZ14FMyz8PU6j5.vM/3B.wGLeTluUHR4YMes6DasZuaSabmFpP5G'
