--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: backend
     ports:
-      - "8080:8080"
+      - "8081:8081"
     env_file: .env.prod
     networks:
       - mynet
@@ -21,6 +21,8 @@ services:
       - "6379:6379"
     command: /bin/sh -c "redis-server --requirepass $$REDIS_PASSWORD"
     env_file: .env.prod
+    volumes:
+      - redis_data:/data
 
   redisinsight:
     image: redislabs/redisinsight:latest
@@ -38,6 +40,8 @@ services:
     ports:
       - "5432:5432"
     env_file: .env.prod
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - mynet
 
@@ -88,5 +92,5 @@ networks:
     driver: bridge
 
 volumes:
-  minio-data:
-    driver: local
+  postgres_data:
+  redis_data:
