--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     env_file: .env.prod
     volumes:
       - redis_data:/data
+    networks:
+      - mynet
 
   redisinsight:
     image: redislabs/redisinsight:latest
