--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
   db:
     image: postgres:latest
     restart: always
-    container_name: meetspace_postgres
+    container_name: postgres
     ports:
       - "5432:5432"
     env_file: .env.prod
