--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,32 @@ services:
     networks:
       - mynet
 
+  livekit:
+    image: livekit/livekit-server
+    ports:
+      - 7880:7880
+      - 7881:7881
+      - 7882:7882/udp
+    volumes:
+      - ./livekit.yaml:/livekit.yaml
+    command:
+      - "--config"
+      - "/livekit.yaml"
+      - "--node-ip=127.0.0.1"
+
+  minio:
+    image: minio/minio
+    restart: unless-stopped
+    ports:
+      - 9000:9000
+      - 9001:9001
+    volumes:
+      - minio_data:/data
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: password
+    command: server /data --console-address ":9001"
+
   # elasticsearch:
   #   image: elasticsearch:7.14.2
   #   container_name: elasticsearch
@@ -88,3 +114,4 @@ networks:
 volumes:
   postgres_data:
   redis_data:
+  minio_data:
