--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: "3"
 
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - backend
+
   backend:
     build: .
     restart: always
@@ -50,78 +59,62 @@ services:
       MINIO_ROOT_PASSWORD: password
     command: server /data --console-address ":9001"
 
-# livekit:
-#   image: livekit/livekit-server
-#   ports:
-#     - 7880:7880
-#     - 7881:7881
-#     - 7882:7882/udp
-#   volumes:
-#     - ./livekit.yaml:/livekit.yaml
-#   command:
-#     - "--config"
-#     - "/livekit.yaml"
-#     - "--node-ip=127.0.0.1"
+  # prometheus:
+  #   image: prom/prometheus
+  #   container_name: prometheus
+  #   restart: always
+  #   ports:
+  #     - "9090:9090"
 
-# prometheus:
-#   image: prom/prometheus
-#   container_name: prometheus
-#   restart: always
-#   ports:
-#     - "9090:9090"
+  # grafana:
+  #   image: grafana/grafana
+  #   container_name: grafana
+  #   restart: always
+  #   ports:
+  #     - "3000:3000"
 
-# grafana:
-#   image: grafana/grafana
-#   container_name: grafana
-#   restart: always
-#   ports:
-#     - "3000:3000"
+  # elasticsearch:
+  #   image: elasticsearch:7.14.2
+  #   container_name: elasticsearch
+  #   ports:
+  #     - "9200:9200"
+  #   environment:
+  #     - discovery.type=single-node
+  #     - ELASTIC_USERNAME=elastic
+  #     - ELASTIC_PASSWORD=elastic
+  #     - xpack.security.enabled=true
 
-# elasticsearch:
-#   image: elasticsearch:7.14.2
-#   container_name: elasticsearch
-#   ports:
-#     - "9200:9200"
-#   environment:
-#     - discovery.type=single-node
-#     - ELASTIC_USERNAME=elastic
-#     - ELASTIC_PASSWORD=elastic
-#     - xpack.security.enabled=true
+  # zookeeper:
+  #   image: wurstmeister/zookeeper
+  #   container_name: zookeeper
+  #   ports:
+  #     - "2181:2181"
 
-# zookeeper:
-#   image: wurstmeister/zookeeper
-#   container_name: zookeeper
-#   restart: always
-#   ports:
-#     - "2181:2181"
+  # kafka:
+  #   image: wurstmeister/kafka
+  #   container_name: kafka
+  #   ports:
+  #     - "9092:9092"
+  #   environment:
+  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+  #     KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+  #   depends_on:
+  #     - zookeeper
 
-# kafka:
-#   image: wurstmeister/kafka
-#   container_name: kafka
-#   restart: always
-#   ports:
-#     - "9092:9092"
-#   environment:
-#     KAFKA_ADVERTISED_HOST_NAME: kafka
-# KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-# # KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-# # KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-# # KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_HOST://kafka:29092
-# # KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-# volumes:
-#   - /var/run/docker.sock:/var/run/docker.sock
-# depends_on:
-#   - zookeeper
-
-# nginx:
-#   build: ./nginx
-#   container_name: meetspace_nginx
-#   ports:
-#     - "8010:8010"
-
-# networks:
-#   mynet:
-#     driver: bridge
+  # livekit:
+  #   image: livekit/livekit-server
+  #   ports:
+  #     - 7880:7880
+  #     - 7881:7881
+  #     - 7882:7882/udp
+  #   volumes:
+  #     - ./livekit.yaml:/livekit.yaml
+  #   command:
+  #     - "--config"
+  #     - "/livekit.yaml"
+  #     - "--node-ip=127.0.0.1"
 
 volumes:
   meetspace_db_data:
